# windowpane-apps

./: Cargo.toml  README.md  build.rs  manifest.json  manifest.proto
.trunk/: trunk.yaml
examples/HelloWorld/: launch.js  manifest.json
examples/Taskbar/: launch.js  manifest.json
schema/: Dropdown.json  Manifest.json  Setting.json
src/: main.rs
src/cli/: main.rs
src/core/: lib.rs
src/manifest/: manifest.rs  mod.rs
