[package]
name = "windowpane-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dircpy = "0.3.14"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
sha256 = "1.1.3"
tar = "0.4.38"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[build-dependencies]
protobuf-codegen = "3.2.0"
