[package]
name = "fenetre"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dircpy = "0.3.14"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
sha256 = "1.1.3"
tar = "0.4.38"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[build-dependencies]
protobuf-codegen = "3.2.0"

[[bin]]
name = "fenetre"
path = "src/cli/main.rs"

[lib]
name = "wpapps"
path = "src/core/lib.rs"
